test/parse/bad-string-unicode-escape-large.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func) (export "foo\u{1100000}" (func 0)))
(;; STDERR ;;;
out/test/parse/bad-string-unicode-escape-large.txt:3:28: error: bad escape "\u{110000"
(module (func) (export "foo\u{1100000}" (func 0)))
                           ^^^^^^^^^
out/test/parse/bad-string-unicode-escape-large.txt:3:24: error: unexpected token "Invalid", expected a quoted string (e.g. "foo").
(module (func) (export "foo\u{1100000}" (func 0)))
                       ^^^^^^^^^^^^^^^^
out/test/parse/bad-string-unicode-escape-large.txt:3:47: error: unexpected token 0, expected ).
(module (func) (export "foo\u{1100000}" (func 0)))
                                              ^
;;; STDERR ;;)
